--- a/.gitignore
+++ b/.gitignore
@@ -130,7 +130,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-data/.env
+.env
 .venv
 env/
 venv/
@@ -168,3 +168,6 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# API Keys
+api_key.txt
